--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@antv/f2": "^3.0.2-beta",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.7",
     "fetch-polyfill2": "0.0.3",
