--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "init": "npm run clean && npm i && npm run start",
+    "clean": "rm -rf ./node_modules ./package-lock.json ./pro",
     "start": "webpack-dev-server --config webpack-dev-config.js --hot --inline",
     "pro": "webpack --config webpack-pro-config.js",
     "dev": "webpack --config webpack-dev-config.js -w"
